<resources>
    <string name="app_name">ProjSolo</string>
    <string name="btnGerenciarClientes">Gerenciar Clientes</string>
    <string name="btnCadastrarCliente">Cadatrar Cliente</string>
    <string name="btnEditarCliente">Editar Cliente</string>
    <string name="btnListarCllientes">Listar Clientes</string>
    <string name="btnApagarCliente">Apagar Cliente</string>
    <string name="title_activity_configuracpes">Settings</string>

    <string-array name="listaDeLinguas">
        <item>Português</item>
        <item>Inglês</item>
        <item>Italiano</item>
    </string-array>

    <string name="boasvindas">Seja bem vindo </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txtConfigLinguagem">Idioma:</string>
    <string name="txtLinguagem">Portugues</string>
    <string name="btnAlterarLinguagem">Alterar</string>
    <string name="txtCadastroCPF">Digite seu CPF</string>
    <string name="btnConfirmarCadastroUsuario">Confirmar Cadastro</string>
    <string name="txtCadastroNomeCliente">Nome Completo</string>
    <string name="txtCadastroCelularCliente">Número de Celular</string>
    <string name="txtCadastroTelefoneCliente">Número de Telefone</string>
    <string name="txtCadastroEmailCliente">Email</string>
</resources>
