<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GerenciarClientes">

    <Button
        android:id="@+id/btnCadastrarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2000dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="2000dp"
        android:text="@string/btnCadastrarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEditarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2000dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2000dp"
        android:text="@string/btnEditarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarCliente" />

    <Button
        android:id="@+id/btnListarCllientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2000dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2000dp"
        android:text="@string/btnListarCllientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarCliente" />

    <Button
        android:id="@+id/btnApagarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2000dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2000dp"
        android:text="@string/btnApagarCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarCllientes" />

</androidx.constraintlayout.widget.ConstraintLayout>